force-app/main/default/objects/OpportunityLineItem/fields/Box_Price__c.field-meta.xml
<CustomField>
    <fullName>Box_Price__c</fullName>
    <formula>Box_Qty__c *  ListPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Box List Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>