force-app/main/default/objects/OpportunityLineItem/fields/Box_Units__c.field-meta.xml
<CustomField>
    <fullName>Box_Units__c</fullName>
    <label>Box Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>