force-app/main/default/objects/OpportunityLineItem/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.BU__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU</label>
    <type>Text</type>
</CustomField>