force-app/main/default/objects/OpportunityLineItem/fields/Case_Price__c.field-meta.xml
<CustomField>
    <fullName>Case_Price__c</fullName>
    <formula>Case_Qty__c *  ListPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case List Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>