force-app/main/default/objects/OpportunityLineItem/fields/Case_Qty__c.field-meta.xml
<CustomField>
    <fullName>Case_Qty__c</fullName>
    <formula>IF(PricebookEntry.Pricebook2.RecordType.Name = &apos;NACA&apos;, 
PricebookEntry.Product2.NACA_Case_Qty__c, 
PricebookEntry.Product2.EMEA_Case_Qty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>