force-app/main/default/objects/OpportunityLineItem/fields/CodigoSAP__c.field-meta.xml
<CustomField>
    <fullName>CodigoSAP__c</fullName>
    <formula>PricebookEntry.Product2.CodigoSAP__c</formula>
    <label>Código SAP</label>
    <type>Text</type>
</CustomField>