force-app/main/default/objects/OpportunityLineItem/fields/CubeRMTenderLot__c.field-meta.xml
<CustomField>
    <fullName>CubeRMTenderLot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cube RM Tender Lot</label>
    <referenceTo>cuberm_tc__TenderLot__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>