force-app/main/default/objects/OpportunityLineItem/fields/CubeRMTenderLotProduct__c.field-meta.xml
<CustomField>
    <fullName>CubeRMTenderLotProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cube RM Tender Lot Product</label>
    <referenceTo>cuberm_tc__TenderLotProduct__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>