force-app/main/default/objects/OpportunityLineItem/fields/Item_Units__c.field-meta.xml
<CustomField>
    <fullName>Item_Units__c</fullName>
    <formula>IF(
 CodigoSAP__c = &quot;582&quot; || CodigoSAP__c = &quot;582B&quot;,
 Quantity*1,
 UnidadeMedida__c  *  Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>