force-app/main/default/objects/OpportunityLineItem/fields/Lagacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Lagacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Lagacy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>