force-app/main/default/objects/OpportunityLineItem/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <inlineHelpText>Minimun Order Quantity</inlineHelpText>
    <label>MOQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>