force-app/main/default/objects/OpportunityLineItem/fields/MostrarMultiplicador__c.field-meta.xml
<CustomField>
    <fullName>MostrarMultiplicador__c</fullName>
    <formula>PricebookEntry.Product2.Multiplicador__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiplicador do Produto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>