force-app/main/default/objects/OpportunityLineItem/fields/NecessitaAprovacao__c.field-meta.xml
<CustomField>
    <fullName>NecessitaAprovacao__c</fullName>
    <formula>IF(PrecoVendaTotal__c &lt;  TotalPrecoLista__c, TRUE, FALSE)</formula>
    <label>Necessita de Aprovação</label>
    <type>Checkbox</type>
</CustomField>