force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Frequency__c</fullName>
    <formula>TEXT( Opportunity.Frequency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Frequency</label>
    <type>Text</type>
</CustomField>