force-app/main/default/objects/OpportunityLineItem/fields/PrecoVendaTotal__c.field-meta.xml
<CustomField>
    <fullName>PrecoVendaTotal__c</fullName>
    <formula>Quantity *  UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço de Venda Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>