force-app/main/default/objects/OpportunityLineItem/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Used for Direct Tender, where the description must be entered as same as asked in Tender Public Document (Edital).</description>
    <inlineHelpText>Insert here the asked description as same as Tender Document (Edital).</inlineHelpText>
    <label>Product Description</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>