force-app/main/default/objects/OpportunityLineItem/fields/Product_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Product_Multiplier__c</fullName>
    <formula>PricebookEntry.Product2.Multiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>