force-app/main/default/objects/OpportunityLineItem/fields/Product_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_SAP_Code__c</fullName>
    <formula>PricebookEntry.Product2.SAP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product SAP Code</label>
    <type>Text</type>
</CustomField>