force-app/main/default/objects/OpportunityLineItem/fields/Qty_per_Case__c.field-meta.xml
<CustomField>
    <fullName>Qty_per_Case__c</fullName>
    <complianceGroup>PII;HIPAA;GDPR;PCI;COPPA;CCPA</complianceGroup>
    <formula>PricebookEntry.Product2.Qty_per_Case__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty per Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>