force-app/main/default/objects/OpportunityLineItem/fields/SAPLineItem__c.field-meta.xml
<CustomField>
    <fullName>SAPLineItem__c</fullName>
    <externalId>true</externalId>
    <label>SAPLineItem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>