force-app/main/default/objects/OpportunityLineItem/fields/Tax_per_Product__c.field-meta.xml
<CustomField>
    <fullName>Tax_per_Product__c</fullName>
    <label>Tax per Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>