force-app/main/default/objects/OpportunityLineItem/fields/Total_Price_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_With_Tax__c</fullName>
    <label>Total Price With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>