force-app/main/default/objects/OpportunityLineItem/fields/Total_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_With_Tax__c</fullName>
    <formula>TotalPrice  * (1 + PricebookEntry.Product2.IPI__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>