force-app/main/default/objects/OpportunityLineItem/fields/TotalPrecoLista__c.field-meta.xml
<CustomField>
    <fullName>TotalPrecoLista__c</fullName>
    <formula>Quantity *  ListPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço de Lista Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>