force-app/main/default/objects/OpportunityLineItem/fields/UnidadeMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedida__c</fullName>
    <formula>PricebookEntry.Product2.Box_Units__c</formula>
    <label>Unidade de Medida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>