force-app/main/default/objects/OpportunityLineItem/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.UoM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UoM</label>
    <type>Text</type>
</CustomField>