force-app/main/default/objects/OpportunityLineItem/validationRules/SalesPrice0ForReserachProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>SalesPrice0ForReserachProduct</fullName>
    <active>true</active>
    <errorConditionFormula>Research__c 
&amp;&amp; 
UnitPrice != 0</errorConditionFormula>
    <errorDisplayField>TotalPrice</errorDisplayField>
    <errorMessage>For research Products, Total Price must be 0.  (Sales Price = 0)</errorMessage>
</ValidationRule>